added test for notes removal from category and to be yet fixed move notes test